Annotations openapi ajouter + gestion erreur 404 #33 #37
